[package]
name = "pop-prob-cli"
version = "0.1.1"
authors = ["Brian Wirsing <beamer159@gmail.com>"]
edition = "2018"
description = "A population probability calculator"
license = "MIT"
repository = "https://github.com/beamer159/pop-prob-cli/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
pop-prob = "0.1"
